<resources>
    <string name="app_name">SongDatabase</string>
    <string name="song_title">Song Title</string>
    <string name="enter_song_title_here">Enter Song Title Here</string>
    <string name="singers">Singers</string>
    <string name="enter_singers_name_here">Enter Singers\' Name Here</string>
    <string name="year">Year</string>
    <string name="enter_year_of_release_here">Enter Year Of Release Here</string>
    <string name="stars">Stars</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="insert">INSERT</string>
    <string name="show_list">SHOW LIST</string>
    <string name="show_all">SHOW ALL SONGS WITH 5 STARS</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="cancel2">CANCEL</string>
    <string name="reset">RESET</string>
    <string name="insert_new_song">INSERT NEW SONG</string>
</resources>