<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/buttonInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_new_song" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnStarFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_all" />

    <ListView
        android:id="@+id/lvSongList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>